fixed perspective and overflow layout

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,7 +6,6 @@
 
     @include onTablet {
       @include tabletGrid;
-      row-gap: 50px;
       padding-block: 30px 30px;
     }
 
@@ -70,12 +69,13 @@
     @include onTablet {
       margin-bottom: 0;
       grid-column: 1/2;
-      grid-row: 1;
-      align-self: flex-end;
+      grid-row: 2;
+      margin-bottom: 30px;
     }
     @include onDesktop {
       grid-column: 8/-1;
       grid-row: 2;
+      margin: 0;
     }
   }
 
@@ -152,7 +152,7 @@
 
     @include onTablet {
       grid-column: 1/-1;
-      grid-row: 2;
+      grid-row: 3;
       @include smallText;
       text-align: left;
     }
