--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   background-color: $c-dark;
-
+  z-index: 3;
   &__content {
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@
     text-align: center;
     color: $c-beige;
     @include textInputMenu;
-    
+
     &::after {
       content: '';
 
