--- a/src/styles/blocks/powder.scss
+++ b/src/styles/blocks/powder.scss
@@ -2,6 +2,7 @@
   --arrow-width: 76px;
 
   &__content {
+    overflow: hidden;
     @include onDesktop {
       @include desktopGrid;
     }
